Einfügen Confirmation bei senden von Stadtkarte auf der ich stehe